--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,119 @@
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700&display=swap');
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    background: linear-gradient(180deg, #3b5cab 0%, #0f182c 100%);
+    background-color: #182848;
+    color: white;
+    margin:0 auto;
+    font-weight: 400;
+    font-family: "Source Sans Pro", sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+#App_timerContainer {
+    display: grid;
+    place-items: center;
+    height:100vh;
+    width: 100vw;
+}
+
+h1,h3 {
+    font-weight: 400;
+    letter-spacing: 4px;
+    cursor:default;
+    user-select: none;
+}
+
+/* Navigation */
+#Navigation_container {
+    position: absolute;
+    top:0;
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+}
+
+/* WelcomePopUp */
+#WelcomePopUp_container {
+    position: absolute;
+    top: 0;
+}
+
+/* TimerDisplay */
+
+#TimerDisplay_container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#TimerDisplay_timeContainer {
+    display: flex;
+    flex-direction: column;
+}
+
+#TimerDisplay_timeLeftHeader {
+    text-align: center;
+    margin: 15px;
+    font-size: 100px;
+}
+
+#TimerDisplay_minutesLiteralHeader {
+    text-align: center;
+    margin: 15px;
+}
+
+#TimerDisplay_normalTimerStateHeader {
+    font-size: 20px;
+    margin: 0px;
+}
+
+#TimerDisplay_bigTimerStateHeader {
+    display: flex;
+    font-size: 70px;
+    margin: 0px;
+}
+
+.scaleAnimation {
+    animation: scale 3s ease-in both infinite alternate;
+}
+
+@keyframes scale{
+    0%{transform: scale(100%)}
+    100%{transform: scale(125%)}
+}
+
+/* TimerController */
+#TimerController_container {
+    display: grid;
+    place-items: center;
+}
+
+.TimerController_button {
+    font-weight: 400;
+    font-family: "Source Sans Pro", sans-serif;
+    font-size: 25px;
+    padding: 10px 18px 10px 18px;
+    margin: 15px;
+    letter-spacing: 2px;
+    background-color: #dddddd1d;
+    color: white;
+    border: 0px solid rgb(255, 255, 255);
+    border-radius: 35px;
+    transition: transform 1s;
+}
+
+.TimerController_button:hover {
+    cursor: pointer;
+    font-weight: 400;
+    font-family: "Source Sans Pro", sans-serif;
+    font-size: 25px;
+    padding: 10px 18px 10px 18px;
+    margin: 15px;
+    letter-spacing: 2px;
+    background-color: #dddddd3d;
+    color: white;
+    border: 0px solid rgb(255, 255, 255);
+    border-radius: 35px;
+    transform: scale(110%);
 }
