--- a/src/index.css
+++ b/src/index.css
@@ -33,8 +33,8 @@ h1,h3 {
     align-items: center;
 }
 
-/* WelcomePopUp */
-#WelcomePopUp_container {
+/* PopUp */
+#PopUp_container {
     position: absolute;
     top: 0;
 }
