--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@ body {
     margin:0 auto;
     font-weight: 400;
     font-family: "Source Sans Pro", sans-serif;
+    
 }
 
 #App_timerContainer {
@@ -20,6 +21,10 @@ h1,h3 {
     font-weight: 400;
     letter-spacing: 4px;
     cursor:default;
+    user-select: none;
+}
+
+p,li {
     user-select: none;
 }
 
@@ -44,10 +49,82 @@ h1,h3 {
 }
 
 #PopUp_container {
-    background-color: rgba(0, 0, 0, 0.901);
-    border-radius: 25px;
+    background-color: rgba(0, 0, 0, 0.94);
+    border-radius: 20px;
     padding: 25px;
-    max-width: 600px;
+    margin: 25px;
+    max-width: 400px;
+}
+
+#PopUp_toggleAbout {
+    display: grid;
+    place-items: center;
+}
+
+#PopUp_toggleAboutContent {
+    background-color: rgba(30, 73, 116, 0.656);
+    border-radius: 15px;
+    padding: 15px;
+    letter-spacing: 0.7px;
+    color: rgb(240, 240, 240);
+}
+
+#PopUp_toggleAboutButton {
+    font-weight: 400;
+    font-family: "Source Sans Pro", sans-serif;
+    font-size: 15px;
+    padding: 10px 18px 10px 18px;
+    margin: 15px;
+    letter-spacing: 2px;
+    background-color: rgba(30, 73, 116, 0.656);
+    color: white;
+    border: 0px solid rgb(255, 255, 255);
+    border-radius: 35px;
+    transition: transform 1s;
+}
+
+#PopUp_toggleAboutButton:hover {
+    cursor: pointer;
+    font-weight: 400;
+    font-family: "Source Sans Pro", sans-serif;
+    font-size: 15px;
+    padding: 10px 18px 10px 18px;
+    margin: 15px;
+    letter-spacing: 2px;
+    background-color: rgba(51, 115, 179, 0.656);
+    color: white;
+    border: 0px solid rgb(255, 255, 255);
+    border-radius: 35px;
+    transform: scale(110%);
+}
+
+#PopUp_closeButton {
+    font-weight: 400;
+    font-family: "Source Sans Pro", sans-serif;
+    font-size: 15px;
+    padding: 10px 18px 10px 18px;
+    margin: 15px;
+    letter-spacing: 2px;
+    background-color: #dddddd1d;
+    color: white;
+    border: 0px solid rgb(255, 255, 255);
+    border-radius: 35px;
+    transition: transform 1s;
+}
+
+#PopUp_closeButton:hover {
+    cursor: pointer;
+    font-weight: 400;
+    font-family: "Source Sans Pro", sans-serif;
+    font-size: 15px;
+    padding: 10px 18px 10px 18px;
+    margin: 15px;
+    letter-spacing: 2px;
+    background-color: #dddddd3d;
+    color: white;
+    border: 0px solid rgb(255, 255, 255);
+    border-radius: 35px;
+    transform: scale(110%);
 }
 
 /* TimerDisplay */
