Changed PopUp background color

--- a/src/index.css
+++ b/src/index.css
@@ -50,7 +50,7 @@ p,li,ul {
 }
 
 #PopUp_container {
-    background-color: rgba(0, 0, 0, 0.94);
+    background-color: rgb(20, 30, 53);
     border-radius: 20px;
     padding: 25px;
     margin: 25px;
